--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -50,7 +50,9 @@ $secondary : lightgrey;
   align-content: flex-start;
   justify-content: space-evenly;
   overflow: scroll;
+  padding: 0.5em;
 }
+
 
 .graphGalleryItem {
   //  width: 8em;
